--- a/code/app/andriod/Laundry/res/layout/tabbar_item_view.xml
+++ b/code/app/andriod/Laundry/res/layout/tabbar_item_view.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:focusable="false"
         android:padding="3dp"
-        android:src="@drawable/tabbar_home_icon" >
+        android:src="@drawable/tab_icon_home" >
   
     </ImageView>  
       
