--- a/code/app/andriod/Laundry/res/values/styles.xml
+++ b/code/app/andriod/Laundry/res/values/styles.xml
@@ -16,5 +16,18 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+ 
+    <style name="RadioButton">  
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@drawable/nav_btn</item>  
+        <item name="android:gravity">center</item>  
+        
+        <item name="android:textColor">@drawable/nav_text_color</item>  
+ 
+    </style> 
 
 </resources>
