--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -4,28 +4,238 @@
     android:background="@color/white"
     android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/themecolor"
-        android:orientation="vertical" >
+        android:layout_height="@dimen/top_head_height"
+        android:background="@color/themecolor" >
 
-        <SearchView
-            android:id="@+id/searchView1"
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </SearchView>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="快客洗涤"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/white" />
+    </RelativeLayout>
 
-      
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button06"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/index_btn1"
+                        android:gravity="center_vertical|right"
+                        android:paddingRight="20dp"
+                        android:text="居家类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button05"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/index_btn1"
+                        android:gravity="center_vertical|right"
+                        android:paddingRight="20dp"
+                        android:text="皮毛服饰类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button02"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/index_btn1"
+                        android:gravity="center_vertical|right"
+                        android:paddingRight="20dp"
+                        android:text="汽车配饰类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:padding="10dp" >
+
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/common_btn"
+                        android:focusableInTouchMode="true"
+                        android:text="一键下单"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button04"
+                        android:layout_width="wrap_content"
+                        android:layout_height="70dp"
+                        android:background="@drawable/index_btn3"
+                        android:gravity="center_vertical|left"
+                        android:paddingLeft="20dp"
+                        android:text="上装类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button03"
+                        android:layout_width="wrap_content"
+                        android:layout_height="70dp"
+                        android:background="@drawable/index_btn3"
+                        android:gravity="center_vertical|left"
+                        android:paddingLeft="20dp"
+                        android:text="奢侈品护理及其他类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="70dp"
+                        android:background="@drawable/index_btn3"
+                        android:gravity="center_vertical|left"
+                        android:paddingLeft="20dp"
+                        android:text="下装类"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="1"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="10dp" >
+
+                    <Button
+                        android:id="@+id/Button07"
+                        android:layout_width="wrap_content"
+                        android:layout_height="70dp"
+                        android:background="@drawable/index_btn3"
+                        android:gravity="center_vertical|left"
+                        android:paddingLeft="20dp"
+                        android:text="箱包鞋类（奢侈品除外）"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/content_font_size" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:padding="10dp" >
+
+                    <Button
+                        android:id="@+id/Button08"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/common_btn"
+                        android:focusableInTouchMode="true"
+                        android:text="客服电话"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
     <ListView
         android:id="@+id/home_main_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/backcolor"
         android:divider="@null"
-        android:dividerHeight="1dp" >
-
+        android:dividerHeight="1dp"
+        android:visibility="gone" >
     </ListView>
 
 </LinearLayout>
