--- a/code/app/andriod/Laundry/res/layout/user_login.xml
+++ b/code/app/andriod/Laundry/res/layout/user_login.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/white"
+        android:layout_marginBottom="20dp"
+        android:background="@color/themecolor"
         android:orientation="vertical" >
 
         <RelativeLayout
@@ -37,7 +38,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="用户登录"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="25sp" />
 
             <Button
@@ -50,83 +51,86 @@
                 android:layout_marginRight="20dp"
                 android:background="@null"
                 android:text="注册"
-                android:textColor="@color/themecolor"
+                android:textColor="@color/white"
                 android:textSize="20sp" />
-
         </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp" >
+        android:layout_height="50dp"
+        android:layout_marginBottom="1dp"
+        android:background="@color/white"
+        android:paddingLeft="10dp" >
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <EditText
+            android:id="@+id/EditText01"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:autoText="false"
+            android:background="@null"
+            android:capitalize="none"
+            android:ems="11"
+            android:gravity="left|center_vertical"
+            android:hint="登录手机号"
+            android:inputType="phone"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:selectAllOnFocus="false"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/content_font_size_sm" >
+
+            <requestFocus />
+        </EditText>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/white"
+        android:paddingLeft="10dp" >
+
+        <EditText
+            android:id="@+id/EditText02"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:autoText="false"
+            android:background="@null"
+            android:capitalize="none"
+            android:ems="11"
+            android:gravity="left|center_vertical"
+            android:hint="登录密码"
+            android:inputType="phone"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:selectAllOnFocus="false"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/content_font_size_sm" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white"
+        android:paddingLeft="10dp" >
+
+        <Button
+            android:id="@+id/button3"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/login_input" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/imageView2"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="40dp"
-            android:text="用户名:"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/TextView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_below="@+id/textView2"
-            android:layout_marginTop="14dp"
-            android:text="密    码:"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/user_login_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/TextView01"
-            android:layout_alignRight="@+id/imageView2"
-            android:layout_toRightOf="@+id/textView2"
-            android:autoText="false"
+            android:layout_marginLeft="14dp"
             android:background="@null"
-            android:capitalize="none"
-            android:ems="10"
-            android:gravity="fill_horizontal"
-            android:paddingLeft="10dp"
+            android:drawableRight="@drawable/forward_sm"
+            android:gravity="center_vertical|center_horizontal|left"
             android:paddingRight="10dp"
-            android:selectAllOnFocus="false"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <EditText
-            android:id="@+id/user_login_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/TextView01"
-            android:layout_alignRight="@+id/imageView2"
-            android:layout_toRightOf="@+id/textView2"
-            android:autoText="false"
-            android:background="@null"
-            android:capitalize="none"
-            android:ems="10"
-            android:gravity="fill_horizontal"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:selectAllOnFocus="false"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:text="忘记密码？点击这里找回"
+            android:textColor="@color/black"
+            android:textSize="@dimen/content_font_size_sm" />
 
     </RelativeLayout>
 
@@ -148,7 +152,6 @@
             android:text="登  录"
             android:textColor="@color/white"
             android:textSize="20sp" />
-
     </RelativeLayout>
 
 </LinearLayout>
