--- a/code/app/andriod/Laundry/res/layout/user_login.xml
+++ b/code/app/andriod/Laundry/res/layout/user_login.xml
@@ -114,6 +114,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/white"
         android:paddingLeft="10dp" >
 
