--- a/code/app/andriod/Laundry/res/drawable-hdpi/nav_btn_focuse.xml
+++ b/code/app/andriod/Laundry/res/drawable-hdpi/nav_btn_focuse.xml
@@ -6,7 +6,7 @@
       </shape>   
 </item>   
 <!-- 主体背景颜色值 -->  
-<item android:bottom="2dp" >   
+<item android:right="2dp" >   
      <shape>   
            <solid android:color="@color/white" />  
  
