--- a/code/app/andriod/Laundry/res/drawable-hdpi/nav_btn_unsel.xml
+++ b/code/app/andriod/Laundry/res/drawable-hdpi/nav_btn_unsel.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 <!-- 连框颜色值 --><item>   
       <shape>   
-            <solid android:color="@color/white" />   
+            <solid android:color="@color/backcolor" />   
       </shape>   
 </item>   
 <!-- 主体背景颜色值 -->  
-<item android:bottom="2dp" >   
+<item android:right="2dp" >   
      <shape>   
-           <solid android:color="@color/white" />  
+           <solid android:color="@color/backcolor" />  
  
      </shape>    
 </item>
