--- a/code/app/andriod/Laundry/res/layout/home_goods_item.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_item.xml
@@ -2,25 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:paddingRight="10dp" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/white"
-        android:padding="10dp" >
+        android:padding="10dp"
+        android:paddingRight="10dp" >
 
         <ImageView
             android:id="@+id/home_list_item_img"
-            android:layout_width="120dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
+            android:scaleType="fitXY"
             android:src="@drawable/load_image_failed" />
 
         <TextView
             android:id="@+id/home_list_item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@+id/home_list_item_img"
             android:text="衣物名称"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -31,18 +35,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/home_list_item_img"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@+id/home_list_item_img"
             android:text="TextView"
             android:textColor="@color/themecolor" />
 
         <CheckBox
             android:id="@+id/checkBox1"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="CheckBox" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@+id/home_list_item_curPrice"
+            android:layout_alignRight="@+id/home_list_item_title"
+            android:background="@drawable/checkbox_btn"
+            android:button="@null" />
 
     </RelativeLayout>
 
