--- a/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
@@ -159,7 +159,7 @@
                 android:orientation="vertical" >
 
                 <ListView
-                    android:id="@+id/listView1"
+                    android:id="@+id/product_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:divider="@color/backcolor"
