--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -34,6 +34,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
+                  <android.support.v4.view.ViewPager  
+			        android:id="@+id/home_ad_image"  
+			        android:layout_width="wrap_content"  
+			        android:layout_height="150dp"  
+			        android:layout_gravity="center" >  
+			                
+			        <android.support.v4.view.PagerTabStrip    
+			            android:id="@+id/home_ad_image_tab"    
+			            android:layout_width="wrap_content"    
+			            android:layout_height="wrap_content"    
+			            android:layout_gravity="top"/>    
+			           
+			    </android.support.v4.view.ViewPager>  
+	   <RelativeLayout    
+        android:layout_width="fill_parent"    
+        android:layout_height="wrap_content"   
+        android:orientation="vertical" >    
+    
+        <LinearLayout    
+            android:id="@+id/home_ad_image_group"    
+            android:layout_width="fill_parent"    
+            android:layout_height="wrap_content"    
+            android:layout_alignParentBottom="true"   
+            android:layout_marginBottom="30dp"    
+            android:gravity="center_horizontal"    
+            android:orientation="horizontal" >    
+        </LinearLayout>    
+    </RelativeLayout>
+    
             </LinearLayout>
 
             <LinearLayout
