--- a/code/app/andriod/Laundry/res/layout/chart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_fragment.xml
@@ -68,7 +68,7 @@
                 android:padding="10dp" >
 
                 <TextView
-                    android:id="@+id/chart_tatolCnt"
+                    android:id="@+id/chart_tatolCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3"
@@ -77,7 +77,7 @@
                     android:textSize="@dimen/content_font_size" />
 
                 <TextView
-                    android:id="@+id/chart_tatolPrice"
+                    android:id="@+id/chart_text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="件物品，总计："
@@ -86,7 +86,7 @@
                     android:textSize="@dimen/content_font_size" />
 
                 <TextView
-                    android:id="@+id/chart_submit"
+            android:id="@+id/chart_total_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
@@ -105,7 +105,7 @@
                 android:paddingRight="30dp" >
 
                 <Button
-                    android:id="@+id/user_mark_manage_addbtn"
+            android:id="@+id/chart_submit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
