--- a/code/app/andriod/Laundry/res/layout/user_register.xml
+++ b/code/app/andriod/Laundry/res/layout/user_register.xml
@@ -50,7 +50,7 @@
         android:paddingLeft="10dp" >
 
         <EditText
-            android:id="@+id/EditText01"
+            android:id="@+id/user_register_txt_phoneNum"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:autoText="false"
@@ -75,7 +75,7 @@
         android:paddingLeft="10dp" >
 
         <EditText
-            android:id="@+id/user_register_email"
+            android:id="@+id/user_register_txt_verify_code"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:autoText="false"
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/user_register_email"
+            android:layout_toRightOf="@+id/user_register_txt_verify_code"
             android:background="@color/focuscolor"
             android:text="获取验证码"
             android:textColor="@color/white" />
@@ -113,7 +113,7 @@
         android:paddingRight="20dp" >
 
         <EditText
-            android:id="@+id/user_register_password"
+            android:id="@+id/user_register_txt_password"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@null"
