修复首页viewpager 多余标题栏bug

--- a/code/app/andriod/Laundry/res/values/mispString.xml
+++ b/code/app/andriod/Laundry/res/values/mispString.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="tabbar_home">首页</string>
-    <string name="tabbar_cart">购物车</string>
+    <string name="tabbar_cart">洗衣篮</string>
     <string name="tabbar_news">最新咨询</string>
     <string name="tabbar_user">个人中心</string>
     <string name="title_activity_login">LoginActivity</string>
