--- a/code/app/andriod/Laundry/res/layout/chart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_list_item.xml
@@ -19,20 +19,6 @@
             android:background="@null"
             android:src="@drawable/item_del_icon_normal" />
 
-        <EditText
-            android:id="@+id/chart_list_item_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="20dp"
-            android:layout_toLeftOf="@+id/imageButton1"
-            android:ems="2"
-            android:inputType="number"
-            android:text="1" >
-
-            <requestFocus />
-        </EditText>
-
         <TextView
             android:id="@+id/chart_list_item_price"
             android:layout_width="wrap_content"
@@ -52,6 +38,24 @@
             android:layout_marginLeft="16dp"
             android:text="衣物名称"
             android:textColor="@color/black" />
+
+        <EditText
+            android:id="@+id/chart_list_item_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageButton1"
+            android:layout_marginLeft="16dp"
+            android:layout_toRightOf="@+id/chart_list_item_price"
+            android:background="@drawable/edittext_sel"
+            android:ems="2"
+            android:gravity="center_vertical|center_horizontal"
+            android:inputType="number"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="@dimen/head_font_size_sm" >
+
+            <requestFocus />
+        </EditText>
 
     </RelativeLayout>
 
